--- a/oracle.html
+++ b/oracle.html
@@ -10,14 +10,15 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #010101;
         }
 
         section {
             max-width: 600px;
             margin: 20px auto;
             padding: 20px;
-            background-color: white;
+            background-color: black;
+            border: 4px solid #FFA500;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 5px;
         }
