--- a/oracle.html
+++ b/oracle.html
@@ -80,24 +80,36 @@
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
+        </div>
+
+        <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
             <p>Relational Database Concepts</p>
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
+        </div>
+
+        <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
             <p>Relational Database Concepts</p>
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
+        </div>
+
+        <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
             <p>Relational Database Concepts</p>
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
+        </div>
+
+        <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
             <p>Relational Database Concepts</p>
