--- a/oracle.html
+++ b/oracle.html
@@ -80,8 +80,10 @@
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
-        </div>
+        </div>        
+    </section>
 
+     <section>
         <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
@@ -89,8 +91,10 @@
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
-        </div>
+        </div>        
+    </section>
 
+     <section>
         <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
@@ -98,8 +102,10 @@
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
-        </div>
+        </div>        
+    </section>
 
+     <section>
         <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
@@ -107,8 +113,10 @@
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
-        </div>
+        </div>        
+    </section>
 
+     <section>
         <div class="pdf-card">
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>NAMING RULES AND CONVENTIONS</h2>
@@ -116,7 +124,7 @@
             <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
-        </div>
+        </div>        
     </section>
 </body>
 
