--- a/oracle.html
+++ b/oracle.html
@@ -77,7 +77,7 @@
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>Unit - 1 (Purpose of Database Systems)</h2>
             <p>Relational Database Concepts</p>
-            <a href="https://docs.google.com/document/d/1n7JY5OyWv2Pj64_9qGsNev166F2dbJpu1c7KP7DbZcg/edit?usp=sharing" download>
+            <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
         </div>        
@@ -88,7 +88,7 @@
             <img src="pdf.png" alt="PDF 1" width="100px" height="100px">
             <h2>Unit - 3 (Naming rules and conventions)</h2>
             <p>Relational Database Concepts</p>
-            <a href="https://docs.google.com/document/d/1rGsRrBpzEoq7rq7EOFswuP2w0wSDVLqlsjs0BupWzbA/edit?usp=sharing" download>
+            <a href="https://drive.google.com/file/d/1iyA8jpKFFTpZQH2BjlZ4nd1fhtjrFgIC/view?usp=sharing" download>
                 <button>Open PDF</button>
             </a>
         </div>        
